// Copyright 2022 Edward McFarlane. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

syntax = "proto3";

package larking.api;

import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/rpc/status.proto";

import "larking/api/action.proto";

option go_package = "larking.io/api/workerpb;workerpb";

message Command {
  string name = 1;
  oneof exec {
    string input = 2;
    string complete = 3;
    string format = 4;
  }
}

message Output {
  string output = 1; // printed output
  google.rpc.Status status = 2;
}

message Completion {
  repeated string completions = 3; // completions
}

message Result {
  oneof result {
    Output output = 1;
    Completion completion = 2;
  }
}

message RunThreadRequest { string name = 1; }
message TestThreadRequest { string name = 1; }

service Worker {
  rpc RunOnThread(stream Command) returns (stream Result) {
    option (google.api.http) = {
      custom : {kind : "websocket" path : "/v1/threads:run"}
      body : "*"
    };
  }
  rpc RunThread(RunThreadRequest) returns (Output) {
    option (google.api.http) = {
      post : "/v1/threads:run"
      body : "*"
    };
  }
  rpc TestThread(TestThreadRequest) returns (Output) {
    option (google.api.http) = {
      post : "/v1/threads:test"
      body : "*"
    };
  }

  // Execution API
  //
  // rpc Execute(ExecuteActionRequest) returns (stream
  // google.longrunning.Operation) {
  rpc ExecuteAction(ExecuteActionRequest) returns (ExecuteActionResponse) {
    option (google.api.http) = {
      post : "/v1/actions:execute"
      body : "*"
    };
  }
}

message ExecuteActionRequest {
  string name = 1;
  larking.api.Action action = 2;
}

message ExecuteActionResponse { larking.api.Action action = 1; }
